# grib-rs

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  ROADMAP.md  build.rs  rustfmt.toml
.github/ISSUE_TEMPLATE/: bug-report.md  bug-report.yml  data-support-request.md  data-support-request.yml  feature-request.md  feature-request.yml
.github/workflows/: cd.yml  ci.yml  pages.yml  rust.yml
.zed/: settings.template.json
cli/: Cargo.toml
cli/src/: cli.rs  commands.rs  main.rs
cli/src/commands/: completions.rs  decode.rs  dump.rs  info.rs  inspect.rs  list.rs  mod.rs
cli/tests/cli/: commands.rs  main.rs  utils.rs
cli/tests/cli/commands/: common.rs  decode.rs  dump.rs  info.rs  inspect.rs  list.rs
cli/tests/cli/utils/: mod.rs  testdata.rs
codegen/: Cargo.toml
codegen/src/: lib.rs  param_codes.rs
codegen/tests/: 01-normal-case.rs  02-not-empty-enum.rs  02-not-empty-enum.stderr  03-nonexistent-file.rs  03-nonexistent-file.stderr  dumping.rs  progress.rs
codegen/tests/data/: table
compat-test/: Cargo.toml
compat-test/src/: lib.rs
def/: README.md
def/CCT/: C00.xml  C11.xml
def/wgrib2/: README.md  gribtable
demo/: Cargo.toml  index.html
demo/src/: drop_area.rs  main.rs  submessage_modal.rs  utils.rs
docs/: book.toml  development.md  grib2-operation-comparison.md
docs/src/: SUMMARY.md  grib2-tool-comparison.md  submessage-finding.md  submessage-listing.md
examples/: check_decoding_of_files.rs  decode_layer.rs  decode_surface.rs  find_layers.rs  find_surfaces.rs  list_layers.rs  list_surfaces.rs
grib-data-helpers/: Cargo.toml
grib-data-helpers/src/: buf.rs  dump.rs  from_slice.rs  lib.rs  try_from_slice.rs
grib-data-helpers/src/from_slice/: as_grib_int.rs
grib-template-derive/: Cargo.toml
grib-template-derive/src/: lib.rs
grib-template-derive/tests/: dump.rs  dump_for_option.rs  dump_standalone.rs  reading.rs  runner.rs  try_from_slice.rs  try_from_slice_for_option.rs  try_from_slice_standalone.rs  write_to_buffer.rs
grib-template-helpers/: Cargo.toml
grib-template-helpers/src/: dump.rs  lib.rs  try_from_slice.rs  types.rs  write_to_buffer.rs
grib-template-helpers/src/try_from_slice/: as_grib_signed.rs
macros/: Cargo.toml
macros/src/: lib.rs  wgrib2.rs
macros/tests/: 01-normal-case.rs  02-not-empty-enum.rs  02-not-empty-enum.stderr  03-nonexistent-file.rs  progress.rs
macros/tests/data/: table
shared/: Cargo.toml
shared/src/: lib.rs
src/: codetables.rs  context.rs  cookbook.rs  data.rs  decoder.rs  decoders.rs  def.rs  encoder.rs  error.rs  grid.rs  helpers.rs  lib.rs  main.rs  parser.rs  reader.rs  time.rs  utils.rs
src/codetables/: core.rs  external.rs  grib2.rs  mod.rs  old.rs
src/datatypes/: mod.rs  product_attributes.rs  sections.rs
src/decoder/: bitmap.rs  ccsds.rs  common.rs  complex.rs  helpers.rs  jpeg2000.rs  param.rs  png.rs  run_length.rs  simple.rs  stream.rs
src/decoder/ccsds/: aec.rs
src/decoder/complex/: diff.rs  missing.rs
src/decoder/jpeg2000/: decoder.rs  ext.rs  image.rs  stream.rs
src/decoders/: bitmap.rs  common.rs  complex.rs  mod.rs  param.rs  png.rs  run_length.rs  simple.rs  stream.rs
src/decoders/complex/: diff.rs  missing.rs  section7.rs
src/decoders/jpeg2000/: ext.rs  mod.rs
src/def/: grib2.rs
src/def/grib2/: section5.rs  template1.rs  template3.rs  template5.rs
src/encoder/: bitmap.rs  complex.rs  helpers.rs  simple.rs  to_grib_signed.rs  writer.rs
src/grid/: earth.rs  flags.rs  gaussian.rs  helpers.rs  lambert.rs  latlon.rs  polar_stereographic.rs  rotated_ll.rs
testdata/: 20240101000000-0h-oper-fc.grib2.0-10.xz  20250912120000-0h-oper-fc.grib2.89.xz  20260219T00Z_MSC_HRDPS_CAPE_Sfc_RLatLon0.0225_PT000H.grib2  CMC_RDPA_APCP-024-0100cutoff_SFC_0_ps10km_2023121806_000.grib2.xz  CMC_glb_TMP_ISBL_1_latlon.24x.24_2021051800_P000.grib2  README.md  Z__C_RJTD_20160822020000_NOWC_GPV_Ggis10km_Pphw10_FH0000-0100_grib2.bin.xz  Z__C_RJTD_20170221120000_MSG_GPV_Gll0p5deg_Pys_B20170221120000_F2017022115-2017022212_grib2.bin.xz  Z__C_RJTD_20190304000000_MSM_GUID_Rjp_P-all_FH03-39_Toorg_grib2.bin.xz  Z__C_RJTD_20190605000000_MEPS_GPV_Rjp_L-pall_FH00-15_grib2.bin.0-20.xz  ds.critfireo.bin.xz  ds.minrh.bin.xz  gdas.t00z.sfluxgrbf000.grib2.0.xz  gdas.t12z.pgrb2.0p25.f000.12.xz  gdas.t12z.pgrb2.0p25.f000.46.xz  icon_global_icosahedral_single-level_2021112018_000_TOT_PREC.grib2  wind_solar_ind_0.125_20240521_12Z.grib2.0.xz
tests/: cli.rs
tests/cli/: main.rs
tests/cli/commands/: common.rs  decode.rs  info.rs  inspect.rs  list.rs  mod.rs
tests/cli/utils/: mod.rs  testdata.rs
tests/utils/: mod.rs
web/: Cargo.toml  index.html
web/src/: drop_area.rs  main.rs  palette.rs  submessage_modal.rs
