[package]
name = "grib"
description = "GRIB format parser for Rust"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
exclude = ["/.github", "/testdata"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace]
members = ["gen", "cli", "demo", "codegen"]

[workspace.package]
version = "0.11.0"
authors = ["Noritada Kobayashi <noritada.kobayashi@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/noritada/grib-rs"
homepage = "https://github.com/noritada/grib-rs"
categories = ["science"]
keywords = ["GRIB", "weather", "meteorology"]

[dependencies]
chrono = { version = "0.4.34", optional = true }
num = "0.4"
num_enum = "0.7"
png = "0.17"
proj = { version = "0.30", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
openjpeg-sys = "1.0.5" # avoiding 1.0.2/1.0.4

[dev-dependencies]
flate2 = "1.0"
tempfile = "3"
xz2 = "0.1"

[build-dependencies]
grib-build = { path = "gen", version = "0.4.3" }

[features]
# Enable computation of latitudes and longitudes of grid points points using
# PROJ for some grid systems.
gridpoints-proj = ["dep:proj"]

# Enable date and time validity checks and date and time calculations using
# chrono crate.
time-calculation = ["dep:chrono"]

[profile.release]
strip = true
lto = true
codegen-units = 1
