[package]
name = "grib"
description = "GRIB format parser for Rust"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
build = "build/main.rs"
exclude = ["/.github", "/testdata"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace]
members = ["grib-template-derive", "grib-template-helpers", "gen", "cli", "demo"]

[workspace.package]
version = "0.13.5"
authors = ["Noritada Kobayashi <noritada.kobayashi@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/noritada/grib-rs"
homepage = "https://github.com/noritada/grib-rs"
categories = ["science"]
keywords = ["GRIB", "weather", "meteorology"]

[dependencies]
chrono = { version = "0.4.34", optional = true }
grib-template-derive = { path = "grib-template-derive", version = "0.1.1" }
grib-template-helpers = { path = "grib-template-helpers", version = "0.1.1" }
num = "0.4"
num_enum = "0.7"
proj = { version = "0.31", optional = true }

libaec-sys = { version = "0.1.1", optional = true }
openjpeg-sys = { version = "1.0.5", optional = true }
png = { version = "0.18", optional = true }

[dev-dependencies]
flate2 = "1.0"
tempfile = "3"
xz2 = "0.1"

[build-dependencies]
grib-build = { path = "gen", version = "0.4.4" }
toml_edit = "0.24"

[features]
default = [
  "jpeg2000-unpack-with-openjpeg",
  "png-unpack-with-png-crate",
  "ccsds-unpack-with-libaec",
  "gridpoints-proj",
]

# Enable JPEG 2000 code stream format support in the GPV decoder with the help
# of OpenJPEG written in C.
jpeg2000-unpack-with-openjpeg = ["dep:openjpeg-sys"]

# Enable experimental performance improvements in the JPEG 2000 code stream
# format decoder.
jpeg2000-unpack-with-openjpeg-experimental = ["jpeg2000-unpack-with-openjpeg"]

# Enable Portable Network Graphics (PNG) support in the GPV decoder with the
# help of png crate.
png-unpack-with-png-crate = ["dep:png"]

# Enable CCSDS recommended lossless compression support in the GPV decoder with
# the help of libaec written in C.
ccsds-unpack-with-libaec = ["dep:libaec-sys"]

# Enable computation of latitudes and longitudes of grid points points using
# PROJ for some grid systems.
gridpoints-proj = ["dep:proj"]

# Enable date and time validity checks and date and time calculations using
# chrono crate.
time-calculation = ["dep:chrono"]

[profile.release]
strip = true
lto = true
codegen-units = 1
