[package]
name = "grib-cli"
version = "0.5.0"
authors = ["Noritada Kobayashi <noritada.kobayashi@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = """
CLI application for processing GRIB format data, built on the top of the library `grib`
"""
readme = "../README.md"
repository = "https://github.com/noritada/grib-rs"
homepage = "https://github.com/noritada/grib-rs"
categories = ["science"]
keywords = ["GRIB", "weather", "meteorology"]

[dependencies]
anyhow = "1"
clap = { version = "3.2", features = ["cargo"] }
console = "0.15"
grib = { path = "..", version = "=0.5.0" }
once_cell = "1.13"
regex = "1.6"

[target.'cfg(unix)'.dependencies]
pager = "0.16"
which = "4"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
tempfile = "3"
xz2 = "0.1"
