[package]
name = "grib-cli"
description = """
CLI application for processing GRIB format data, built on the top of the library `grib`
"""
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[[bin]]
name = "gribber"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = "0.4.23"
clap = "4.1"
clap_complete = "4"
console = "0.15"
grib = { path = "..", version = "=0.7.0" }
once_cell = "1.13"
regex = "1.6"

[target.'cfg(unix)'.dependencies]
pager = "0.16"
which = "4"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
tempfile = "3"
xz2 = "0.1"
