[package]
name = "grib-cli"
description = """
CLI application for processing GRIB format data, built on the top of the library `grib`
"""
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[[bin]]
name = "gribber"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = "4.1"
clap_complete = "4"
console = "0.16"
regex = "1.8"

[target.'cfg(unix)'.dependencies]
grib = { path = "..", version = "=0.13.2", features = ["gridpoints-proj", "jpeg2000-unpack-with-openjpeg", "png-unpack-with-png-crate", "ccsds-unpack-with-libaec"] }
pager = "0.16"
which = "8"

[target.'cfg(not(unix))'.dependencies]
grib = { path = "..", version = "=0.13.2", features = ["jpeg2000-unpack-with-openjpeg", "png-unpack-with-png-crate", "ccsds-unpack-with-libaec"] }

[dev-dependencies]
assert_cmd = "2"
flate2 = "1.0"
predicates = "3"
tempfile = "3"
xz2 = "0.1"
