[package]
name = "grib-codegen"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
autotests = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/runner.rs"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }

[dependencies]
grib-shared = { path = "../shared", version = "=0.1.0" }
# proc-macro2 = "1"
quote = "1"
syn = "2"
