[package]
name = "grib-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-file = { version = "0.3", features = ["futures"] }
grib = { path = "..", version = "0.10.1" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Blob",
    "DataTransfer",
    "DomTokenList",
    "Element",
    "FileList",
    "DragEvent",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
] }
yew = { version = "0.21", features = ["csr"] }
